# valueswap

./: README.md  canister_ids.json  check_balances.sh  contorller.sh  createPool.sh  deploy.sh  dfx.json  package-lock.json  package.json  swap_test.sh  swap_transfer.sh  transfer.sh  verify_did.sh
scripts/: LP_ledger.sh  createpool.sh  deploy_ckbtc.sh  deploy_cketh.sh  reacharge.sh  testBackend.sh
scripts/helper_scripts/: approval.sh  create_pool_test.sh  local_transfer.sh  pre_compute_swap.sh  sendBalance.sh  swap_test.sh  swap_test2.sh  test_transfer.sh
scripts/local_deploy/: LP.sh  LP_ledger.sh  deploy.sh  deploy_ckbtc.sh  deploy_cketh.sh  did.sh  generate_did.sh  sendApproval.sh  sendBalance.sh  (+3 more)
src/swap/: Cargo.toml  swap.did  test.sh
src/swap/src/: lib.rs
src/swap/src/api/: balance.rs  metadata.rs  mod.rs  panda.rs  transfer.rs
src/swap/src/utils/: maths.rs  mod.rs  types.rs
src/valueswap_backend/: Cargo.toml  valueswap_backend.did
src/valueswap_backend/src/: lib.rs  memory.rs
src/valueswap_backend/src/api/: balance.rs  deposit.rs  deposit2.rs  metadata.rs  mod.rs  swap.wasm  transfer.rs
src/valueswap_backend/src/constants/: asset_address.rs  mod.rs
src/valueswap_backend/src/tests/: create_pool_tests.rs  mod.rs
src/valueswap_backend/src/types/: assets.rs  memory.rs  mod.rs  state_handlers.rs
src/valueswap_backend/src/utils/: functions.rs  maths.rs  mod.rs  types.rs
src/valueswap_backend/src/vault/: apy.rs  lp_tokens.rs  mod.rs  pool_factory.rs  vault_pool.rs
src/valueswap_backend/tests/: create_pool_rollback.rs  create_pool_valid.rs
(+86 files in other folders)
