[package]
name = "swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.11"
ic-cdk = "0.17"
serde = "1.0.203"
ic-cdk-macros = "0.17.0"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
num-traits = "0.2"
