[package]
name = "valueswap_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.11"
ic-cdk = "0.17"
serde = "1.0.203"
ic-cdk-macros = "0.17.0"
ic-stable-structures = "0.6.2"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
ic-xrc-types = "1.0.0"
futures = "0.3"
lazy_static = "1.4"
once_cell = "1.18"
log = "0.4.22"
num-bigint = "0.4"

